--- a/Svc/k8s/auth/values.yaml
+++ b/Svc/k8s/auth/values.yaml
@@ -1,7 +1,8 @@
+# 所有服务通用，不同变量值在install时重置
 # 此处变量值将应用到模板
 
 # 镜像名称格式：repository:tag
-# install时通过--set image.repository 重置
+# install时重置，--set image.repository=$fullName,image.tag=$tag
 image:
   repository: svc
   tag: latest
@@ -12,7 +13,7 @@ ingress:
   enabled: true
   # 未使用默认的hosts和paths（多host,多path）
   host: ""
-  # 虚拟路径，install时重置
+  # install时重置，--set ingress.path
   path: ""
   tls: []
   #  - secretName: chart-example-tls
