json配置文件在k8s中以configMap卷的形式挂载

--- a/Svc/.vscode/launch.json
+++ b/Svc/.vscode/launch.json
@@ -18,7 +18,7 @@
                 "pipeArgs": [
                     "exec",
                     "-i",
-                    // pod名称变化，无法自动获取？
+                    // 使用Deployment部署时pod名称变化，无法自动获取！
                     "baisui-cm",
                     "--"
                 ],
