--- a/Svc/k8s/cm/templates/deployment.yaml
+++ b/Svc/k8s/cm/templates/deployment.yaml
@@ -4,9 +4,9 @@ metadata:
   name: {{ include "svc.fullname" . }}
   labels:
     app.kubernetes.io/name: {{ include "svc.name" . }}
-    helm.sh/chart: {{ include "svc.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: {{ include "svc.chart" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -27,6 +27,15 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          # 全局参数作为环境变量
+          {{- with .Values.global }}
+          env:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          # 服务的配置文件，支持热更新
+          volumeMounts:
+            - name: config-volume
+              mountPath: /app/etc/config
           # 开发时不启用探针
           # livenessProbe:
           #   httpGet:
@@ -47,6 +56,10 @@ spec:
           #   timeoutSeconds: 120
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: config-volume
+          configMap:
+            name: "{{ include "svc.fullname" . }}-cfg"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
