--- a/Svc/k8s/cm/templates/pod.yaml
+++ b/Svc/k8s/cm/templates/pod.yaml
@@ -20,11 +20,20 @@ spec:
     env:
       {{- toYaml . | nindent 6 }}
     {{- end }}
-    # 服务的配置文件，支持热更新
+    # 挂载数据卷
     volumeMounts:
+      # 服务的配置文件，支持热更新
       - name: config-volume
         mountPath: /app/etc/config
+      # 日志存储到宿主机
+      - name: log-volume
+        mountPath: /app/etc/log
   volumes:
     - name: config-volume
       configMap:
         name: "{{ include "svc.fullname" . }}-cfg"
+    # 在宿主机上指定一个目录，挂载到Pod的容器中，存储日志文件
+    - name: log-volume
+      hostPath:
+        path: /home/dts/log
+        type: DirectoryOrCreate
