--- a/Svc/.vscode/launch.json
+++ b/Svc/.vscode/launch.json
@@ -36,7 +36,7 @@
             "type": "coreclr",
             "request": "attach",
             // 前置任务
-            "preLaunchTask": "cm",
+            //"preLaunchTask": "cm-k8s",
             // ${command:pickRemoteProcess} 出错，通常为1
             "processId": "1",
             "justMyCode": true,
