--- a/Service/src/Dt.Cm/Dt.Cm.csproj
+++ b/Service/src/Dt.Cm/Dt.Cm.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\BaiSui\Service\src\Dt.Cm\Dt.Cm.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp3.0\Dt.Cm.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
   
