--- a/Service/.vscode/launch.json
+++ b/Service/.vscode/launch.json
@@ -5,31 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "cm-local",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "cm-local",
-            "program": "${workspaceFolder}/src/Dt.Cm/bin/Debug/netcoreapp3.0/Dt.Cm.dll",
-            "args": [],
-            // 调试时的工作目录
-            "cwd": "${workspaceFolder}/src/Dt.Cm/",
-            "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
-            },
-            // 调试时将程序输出到终端，和调试控制台分开
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "cm-k8s",
+            "name": "cm",
             "type": "coreclr",
             "request": "attach",
             // 前置任务
-            //"preLaunchTask": "cm-k8s",
+            //"preLaunchTask": "cm",
             // ${command:pickRemoteProcess} 出错，通常为1
             "processId": "1",
             "justMyCode": true,
@@ -54,14 +34,43 @@
             }
         },
         {
-            "name": "auth-local",
+            "name": "auth",
+            "type": "coreclr",
+            "request": "attach",
+            // 前置任务
+            //"preLaunchTask": "auth",
+            // ${command:pickRemoteProcess} 出错，通常为1
+            "processId": "1",
+            "justMyCode": true,
+            "pipeTransport": {
+                "pipeProgram": "kubectl",
+                "pipeArgs": [
+                    "exec",
+                    "-i",
+                    // 使用Deployment部署时pod名称变化，无法自动获取！
+                    "baisui-auth",
+                    "--"
+                ],
+                // 管道工作目录
+                "pipeCwd": "${workspaceFolder}",
+                // 调试工具位置
+                "debuggerPath": "/root/vsdbg/vsdbg",
+                "quoteArgs": false
+            },
+            "sourceFileMap": {
+                // 设置源文件映射，容器中的/src映射到当前工作区的/src
+                "/src": "${workspaceFolder}/src"
+            }
+        },
+        {
+            "name": "cm-local",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "auth-local",
-            "program": "${workspaceFolder}/src/Dt.Auth/bin/Debug/netcoreapp3.0/Dt.Auth.dll",
+            "preLaunchTask": "cm-local",
+            "program": "${workspaceFolder}/src/Dt.Cm/bin/Debug/netcoreapp3.0/Dt.Cm.dll",
             "args": [],
             // 调试时的工作目录
-            "cwd": "${workspaceFolder}/src/Dt.Auth/",
+            "cwd": "${workspaceFolder}/src/Dt.Cm/",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
@@ -72,6 +81,6 @@
             },
             // 调试时将程序输出到终端，和调试控制台分开
             "console": "integratedTerminal"
-        },
+        }
     ]
 }
