--- a/Service/src/Dt.Auth/Dockerfile
+++ b/Service/src/Dt.Auth/Dockerfile
@@ -1,10 +1,10 @@
 # mcr.microsoft.com/dotnet/core/aspnet:2.1-stretch-slim + vsdbg
-FROM aspnet-vsdbg:2.1 AS base
+FROM aspnet-vsdbg:3.0 AS base
 WORKDIR /app
-EXPOSE 80
 EXPOSE 443
+EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/core/sdk:2.1-stretch AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
 COPY ["Dt.Auth/Dt.Auth.csproj", "Dt.Auth/"]
 COPY ["Dt.Core/Dt.Core.csproj", "Dt.Core/"]
@@ -20,4 +20,6 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
 
+# ÈÝÆ÷ÄÚ¼àÌý443
+ENV ASPNETCORE_URLS https://*:443
 ENTRYPOINT ["dotnet", "Dt.Auth.dll"]
