--- a/Service/src/Dt.Auth/Dt.Auth.csproj
+++ b/Service/src/Dt.Auth/Dt.Auth.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\BaiSui\Service\src\Dt.Auth\Dt.Auth.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp3.0\Dt.Auth.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
