--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.31">
 
   <PropertyGroup>
-    <TargetFrameworks>uap10.0.17763;MonoAndroid81</TargetFrameworks>
+    <TargetFrameworks>uap10.0.17763;MonoAndroid81;xamarinios10</TargetFrameworks>
   </PropertyGroup>
 
   <Import Project="..\Common\dtc.props" />
