--- a/Service/src/Dt.Fsm/Properties/launchSettings.json
+++ b/Service/src/Dt.Fsm/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:40001/"
+      "applicationUrl": "https://localhost:40003/"
     }
   },
   "profiles": {
@@ -13,12 +13,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Dt.Auth": {
+    "Dt.Fsm": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:50001/"
+      "applicationUrl": "https://localhost:50003/"
     }
   }
 }
