--- a/Service/src/Bs.Fuwu/Dockerfile
+++ b/Service/src/Bs.Fuwu/Dockerfile
@@ -6,15 +6,15 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
-COPY ["Bs.Khd/Bs.Khd.csproj", "Bs.Khd/"]
+COPY ["Bs.Fuwu/Bs.Fuwu.csproj", "Bs.Fuwu/"]
 COPY ["Dt.Core/Dt.Core.csproj", "Dt.Core/"]
-RUN dotnet restore "Bs.Khd/Bs.Khd.csproj"
+RUN dotnet restore "Bs.Fuwu/Bs.Fuwu.csproj"
 COPY . .
-WORKDIR /src/Bs.Khd
-RUN dotnet build "Bs.Khd.csproj" -c Debug -o /app
+WORKDIR /src/Bs.Fuwu
+RUN dotnet build "Bs.Fuwu.csproj" -c Debug -o /app
 
 FROM build AS publish
-RUN dotnet publish "Bs.Khd.csproj" -c Debug -o /app
+RUN dotnet publish "Bs.Fuwu.csproj" -c Debug -o /app
 
 FROM base AS final
 WORKDIR /app
@@ -22,4 +22,4 @@ COPY --from=publish /app .
 
 # ÈÝÆ÷ÄÚ¼àÌý443
 ENV ASPNETCORE_URLS https://*:443
-ENTRYPOINT ["dotnet", "Bs.Khd.dll"]
+ENTRYPOINT ["dotnet", "Bs.Fuwu.dll"]
