--- a/Service/src/Bs.Fuwu/Bs.Fuwu.csproj
+++ b/Service/src/Bs.Fuwu/Bs.Fuwu.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp3.0\Bs.Jhs.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp3.0\Bs.Fuwu.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
