--- a/Service/src/Bs.Kehu/Dockerfile
+++ b/Service/src/Bs.Kehu/Dockerfile
@@ -6,15 +6,15 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
-COPY ["Bs.Jhs/Bs.Jhs.csproj", "Bs.Jhs/"]
+COPY ["Bs.Kehu/Bs.Kehu.csproj", "Bs.Kehu/"]
 COPY ["Dt.Core/Dt.Core.csproj", "Dt.Core/"]
-RUN dotnet restore "Bs.Jhs/Bs.Jhs.csproj"
+RUN dotnet restore "Bs.Kehu/Bs.Kehu.csproj"
 COPY . .
-WORKDIR /src/Bs.Jhs
-RUN dotnet build "Bs.Jhs.csproj" -c Debug -o /app
+WORKDIR /src/Bs.Kehu
+RUN dotnet build "Bs.Kehu.csproj" -c Debug -o /app
 
 FROM build AS publish
-RUN dotnet publish "Bs.Jhs.csproj" -c Debug -o /app
+RUN dotnet publish "Bs.Kehu.csproj" -c Debug -o /app
 
 FROM base AS final
 WORKDIR /app
@@ -22,4 +22,4 @@ COPY --from=publish /app .
 
 # ÈÝÆ÷ÄÚ¼àÌý443
 ENV ASPNETCORE_URLS https://*:443
-ENTRYPOINT ["dotnet", "Bs.Jhs.dll"]
+ENTRYPOINT ["dotnet", "Bs.Kehu.dll"]
