--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # 后添加
-Service/src/Dts.Auth/etc/log/
-Service/src/Dts.Cm/etc/log/
-Service/src/Dts.Cm/etc/model/
+Service/src/Dt.Cm/etc/log/
+Service/src/Dt.Cm/etc/model/
+Service/src/Dt.Msg/etc/log/
+Service/src/Dt.Fsm/etc/log/
+Service/src/Dt.Fsm/etc/drive/ 
 
 # User-specific files
 *.rsuser
