--- a/Client/Bs.Mgr.Droid/Bs.Mgr.Droid.csproj
+++ b/Client/Bs.Mgr.Droid/Bs.Mgr.Droid.csproj
@@ -86,6 +86,12 @@
     <PackageReference Include="Uno.UI">
       <Version>1.44.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.Compat">
+      <Version>28.0.0.3</Version>
+    </PackageReference>
+     <PackageReference Include="Xamarin.Android.Support.Core.Utils">
+      <Version>28.0.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
