--- a/Client/Bs.Mgr.iOS/packages.config
+++ b/Client/Bs.Mgr.iOS/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="xamarinios10" />
@@ -25,6 +26,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Memory" version="4.5.2" targetFramework="xamarinios10" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
@@ -35,6 +37,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="xamarinios10" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
@@ -53,8 +56,8 @@
   <package id="System.ValueTuple" version="4.4.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Uno.Core" version="1.27.0" targetFramework="xamarinios10" />
-  <package id="Uno.Core.Build" version="1.27.0" targetFramework="xamarinios10" />
-  <package id="Uno.SourceGenerationTasks" version="1.30.0" targetFramework="xamarinios10" />
-  <package id="Uno.UI" version="1.44.1" targetFramework="xamarinios10" />
+  <package id="Uno.Core" version="1.28.0" targetFramework="xamarinios10" />
+  <package id="Uno.Core.Build" version="1.28.0" targetFramework="xamarinios10" />
+  <package id="Uno.SourceGenerationTasks" version="1.31.0" targetFramework="xamarinios10" />
+  <package id="Uno.UI" version="1.45.0" targetFramework="xamarinios10" />
 </packages>
