--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'xamarinios10' ">
+    <PackageReference Include="GMImagePicker.Xamarin" Version="2.3.4" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
   </ItemGroup>
