--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -7,6 +7,10 @@
   <Import Project="..\Common\dtc.props" />
 
   <ItemGroup>
+    <None Remove="Model\User\UserGrpDlg.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
   </ItemGroup>
@@ -20,10 +24,10 @@
     <Page Include="Home\SearchMenu.xaml" />
     <Page Include="Model\SelectRolesDlg.xaml" />
     <Page Include="Model\SysMenu.xaml" />
-    <Page Include="Model\SysModule.xaml" />
     <Page Include="Model\BasePrivilege.xaml" />
     <Page Include="Model\UserParams.xaml" />
-    <Page Include="Model\UserAccount.xaml" />
+    <Page Include="Model\User\EditUserDlg.xaml" />
+    <Page Include="Model\User\UserAccount.xaml" />
     <Page Include="Model\SysRole.xaml" /> 
     <Page Include="Model\BaseCode.xaml" />
   </ItemGroup>
@@ -53,16 +57,16 @@
     <Compile Update="Model\SysMenu.xaml.cs">
       <DependentUpon>SysMenu.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Model\SysModule.xaml.cs">
-      <DependentUpon>SysModule.xaml</DependentUpon>
-    </Compile>
     <Compile Update="Model\BasePrivilege.xaml.cs">
       <DependentUpon>BasePrivilege.xaml</DependentUpon>
     </Compile>
     <Compile Update="Model\UserParams.xaml.cs">
       <DependentUpon>UserParams.xaml</DependentUpon>
-    </Compile> 
-    <Compile Update="Model\UserAccount.xaml.cs">
+    </Compile>
+    <Compile Update="Model\User\EditUserDlg.xaml.cs">
+      <DependentUpon>EditUserDlg.xaml</DependentUpon>
+    </Compile>        
+    <Compile Update="Model\User\UserAccount.xaml.cs">
       <DependentUpon>UserAccount.xaml</DependentUpon>
     </Compile>
     <Compile Update="Model\SysRole.xaml.cs">
